OO-3351: fix the index by name of the tab pane component